making comments to help me explain in my own words what we are setting up here

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-app",
+  "name": "push-up-tracker",
   "version": "1.0.0",
   "description": "create an app for practice using traversy tutorial",
   "main": "server.js",
